# clan-tui

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml
clan_tui/: main.py  new_app.py
